Avoid horizontal scrollbar when breakpoints are focused
http://code.google.com/p/fbug/source/detail?r=7308

--- a/extension/skin/classic/debugger.css
+++ b/extension/skin/classic/debugger.css
@@ -245,6 +245,10 @@
 
 /************************************************************************************************/
 
+.breakpointsGroupListBox {
+  overflow: hidden;
+}
+
 .breakpointBlockHead {
     position: relative;
     padding-top: 4px;
